Bug 143876 - [EMF+] Missing "star"/winding line drawings (missing EmfPlusDrawClosedCurve and EmfPlusFillClosedCurve records implementation)
Summary: [EMF+] Missing "star"/winding line drawings (missing EmfPlusDrawClosedCurve a...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.2.0.2 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: filter:emf
Depends on: 142021
Blocks: emf-testbed EMF-WMF
  Show dependency treegraph
 
Reported: 2021-08-14 19:50 UTC by Chris Sherlock
Modified: 2023-06-06 16:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Reference EMF+ file from the libuemf project (196.89 KB, image/x-emf)
2021-08-14 19:50 UTC, Chris Sherlock
Details
Test EMF+ reference image in PNG format (578.43 KB, image/png)
2021-08-14 19:51 UTC, Chris Sherlock
Details
Missing stars when opening EMF+ file in Libreoffice (218.16 KB, image/png)
2021-08-14 19:51 UTC, Chris Sherlock
Details
The "star" line drawings as seen in Office 365 (187.20 KB, image/png)
2021-08-14 19:52 UTC, Chris Sherlock
Details
Minimal EMF+ image with EmfPlusFillClosedCurve and EmfPlusDrawClosedCurve (1.74 KB, image/emf)
2022-03-22 16:28 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Sherlock 2021-08-14 19:50:33 UTC
Description:
After opening the libeumf project's test EMF+ file, we are not drawing the "star" line drawings. 

Steps to Reproduce:
Open test_libuemf_p_ref.emf

Actual Results:
Star line drawings do not appear

Expected Results:
Star line drawings should appear not appear. One is fully filled with in with grey, the other only has the star arms filled in with grey, but the middle section is transparent.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.3 / LibreOffice Community
Build ID: 2a7ea282da28d665a7dc086360567b4aea27bf08
CPU threads: 4; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Chris Sherlock 2021-08-14 19:50:57 UTC
Created attachment 174283 [details]
Reference EMF+ file from the libuemf project
Comment 2 Chris Sherlock 2021-08-14 19:51:24 UTC
Created attachment 174284 [details]
Test EMF+ reference image in PNG format
Comment 3 Chris Sherlock 2021-08-14 19:51:58 UTC
Created attachment 174285 [details]
Missing stars when opening EMF+ file in Libreoffice
Comment 4 Chris Sherlock 2021-08-14 19:52:52 UTC
Created attachment 174286 [details]
The "star" line drawings as seen in Office 365
Comment 5 Chris Sherlock 2021-08-31 13:09:04 UTC
Hossein, I think your work here might fix this one:

https://gerrit.libreoffice.org/c/core/+/120477
Comment 6 Bartosz 2021-08-31 17:35:20 UTC
(In reply to Chris Sherlock from comment #5)
> Hossein, I think your work here might fix this one:
> 
> https://gerrit.libreoffice.org/c/core/+/120477

The EMF+ import is using primitives. That's why it needs separate implementation.
Comment 7 Bartosz 2022-03-22 16:28:54 UTC
Created attachment 179044 [details]
Minimal EMF+ image with EmfPlusFillClosedCurve and EmfPlusDrawClosedCurve
Comment 8 Commit Notification 2022-05-16 15:27:13 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2156c1090d318b4d28bc14537754bea73507d501

tdf#143876 EMF+ Add DrawClosedCurve and FillClosedCurve support

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Bartosz 2023-06-06 16:19:00 UTC
It is already fixed, together with:
https://bugs.documentfoundation.org/show_bug.cgi?id=143877