drawinglayer/source/tools/emfphelperdata.hxx
@@ -54,8 +54,8 @@ namespace emfplushelper
     #define EmfPlusRecordTypeFillRegion 0x4013
     #define EmfPlusRecordTypeFillPath 0x4014
     #define EmfPlusRecordTypeDrawPath 0x4015
-    //TODO EmfPlusRecordTypeFillClosedCurve 0x4016
-    //TODO EmfPlusRecordTypeDrawClosedCurve 0x4017
+    #define EmfPlusRecordTypeFillClosedCurve 0x4016
+    #define EmfPlusRecordTypeDrawClosedCurve 0x4017
     //TODO EmfPlusRecordTypeDrawCurve 0x4018
     #define EmfPlusRecordTypeDrawBeziers 0x4019
     #define EmfPlusRecordTypeDrawImage 0x401A
